@startuml
'https://plantuml.com/class-diagram

javafx.application <|-- theApp
javafx.application -- theListController
theListController -- ToDoListTableManagement
theListController -- ToDoListItemManagement
theListController -- ToDoListItem
theListController -- ToDoListFiles

class theApp {
+main()
+start()
}

class theListController {
+startTable()
+buttonAddItem()
+buttonRemoveItem()
+buttonChangeStatus()
+buttonShowIncomplete()
+buttonShowComplete()
+buttonShowAll()
+buttonSaveList()
+buttonLoadList()
+buttonClearList()
+buttonBrowse()
+changeDueDateColumn()
+changeDescriptionColumn()
}

class ToDoListFiles {
+saveFile()
+loadFile()
+fileWriter()
}

class ToDoListItem {
-itemDescription
-itemStatus
-itemdueDate
+getDescription()
+setDescription()
+getStatus()
+setStatus()
+getDueDate()
+setDueDate()
+toWrite()
}

class ToDoListItemManagement {
+initialItem()
+addItem()
+removeItem()
+time()
+clearList()
+statusChange()
+checkDate()
+checkLength()
}

class ToDoListTableManagement {
+showIncomplete()
+showComplete()
+showAll()
}

@enduml